--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.8.0",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
+    "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.5.1"
   },
