--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "qrcode.vue": "^1.7.0",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
     "vue-html2pdf": "^1.8.0",
