--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "html2canvas": "^1.0.0-rc.7",
     "qrcode.vue": "^1.7.0",
     "v-calendar": "^1.0.8",
     "vue": "^2.6.11",
+    "vue-barcode": "^1.3.0",
     "vue-html2pdf": "^1.8.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.5.1"
